--- a/tests/geometryXVx/bump_on_tail/CMakeLists.txt
+++ b/tests/geometryXVx/bump_on_tail/CMakeLists.txt
@@ -11,17 +11,18 @@ add_test(NAME TestSimulationBumpontailFFT
 set_property(TEST TestSimulationBumpontailFFT PROPERTY TIMEOUT 200)
 set_property(TEST TestSimulationBumpontailFFT PROPERTY COST 100)
 
-add_test(NAME TestSimulationBumpontailRestartFFT_XVx
-    COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_bumpontail_restart.sh"
-        "${PROJECT_SOURCE_DIR}"
-        "$<TARGET_FILE:bumpontail_fft>"
-        "$<TARGET_FILE:Python3::Interpreter>"
-        "restart"
-        "${RELATIVE_RESTART_TOLERANCE}"
-        "${ABSOLUTE_RESTART_TOLERANCE}")
-set_property(TEST TestSimulationBumpontailRestartFFT_XVx PROPERTY TIMEOUT 200)
-set_property(TEST TestSimulationBumpontailRestartFFT_XVx PROPERTY COST 100)
-set_tests_properties(TestSimulationBumpontailRestartFFT_XVx PROPERTIES LABELS "ResultsNotTested" )
+if (${ACTIVATE_RESTART_TESTS})
+    add_test(NAME TestSimulationBumpontailRestartFFT_XVx
+        COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_bumpontail_restart.sh"
+            "${PROJECT_SOURCE_DIR}"
+            "$<TARGET_FILE:bumpontail_fft>"
+            "$<TARGET_FILE:Python3::Interpreter>"
+            "restart"
+            "${RELATIVE_RESTART_TOLERANCE}"
+            "${ABSOLUTE_RESTART_TOLERANCE}")
+    set_property(TEST TestSimulationBumpontailRestartFFT_XVx PROPERTY TIMEOUT 200)
+    set_property(TEST TestSimulationBumpontailRestartFFT_XVx PROPERTY COST 100)
+endif()
 
 add_test(NAME TestSimulationBumpontailFemUniform_xperiod_vx
     COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_bumpontail.sh"
@@ -32,14 +33,15 @@ add_test(NAME TestSimulationBumpontailFemUniform_xperiod_vx
 set_property(TEST TestSimulationBumpontailFemUniform_xperiod_vx PROPERTY TIMEOUT 200)
 set_property(TEST TestSimulationBumpontailFemUniform_xperiod_vx PROPERTY COST 100)
 
-add_test(NAME TestSimulationBumpontailRestartFemUniform_xperiod_vx
-    COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_bumpontail_restart.sh"
-        "${PROJECT_SOURCE_DIR}"
-        "$<TARGET_FILE:bumpontail_fem_uniform_xperiod_vx>"
-        "$<TARGET_FILE:Python3::Interpreter>"
-        "restart"
-        "${RELATIVE_RESTART_TOLERANCE}"
-        "${ABSOLUTE_RESTART_TOLERANCE}")
-set_property(TEST TestSimulationBumpontailRestartFemUniform_xperiod_vx PROPERTY TIMEOUT 200)
-set_property(TEST TestSimulationBumpontailRestartFemUniform_xperiod_vx PROPERTY COST 100)
-set_tests_properties(TestSimulationBumpontailRestartFemUniform_xperiod_vx PROPERTIES LABELS "ResultsNotTested" )
+if (${ACTIVATE_RESTART_TESTS})
+    add_test(NAME TestSimulationBumpontailRestartFemUniform_xperiod_vx
+        COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_bumpontail_restart.sh"
+            "${PROJECT_SOURCE_DIR}"
+            "$<TARGET_FILE:bumpontail_fem_uniform_xperiod_vx>"
+            "$<TARGET_FILE:Python3::Interpreter>"
+            "restart"
+            "${RELATIVE_RESTART_TOLERANCE}"
+            "${ABSOLUTE_RESTART_TOLERANCE}")
+    set_property(TEST TestSimulationBumpontailRestartFemUniform_xperiod_vx PROPERTY TIMEOUT 200)
+    set_property(TEST TestSimulationBumpontailRestartFemUniform_xperiod_vx PROPERTY COST 100)
+endif()
