--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     -
       name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     -
       name: Set up QEMU
       uses: docker/setup-qemu-action@v2
@@ -51,39 +51,27 @@ jobs:
     container:
       image: ghcr.io/gyselax/gyselalibxx_env:${{ github.sha }}
       options: --user root
+    strategy:
+      matrix:
+        toolchain: [tests_toolchain.cmake, tests_release_toolchain.cmake]
     steps:
     - 
       name: Checkout gyselalibxx
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with: { submodules: recursive }
     - 
       name: Run tests
       run: |
         mkdir build
         cd build
-        cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON -DKokkos_ENABLE_DEPRECATED_CODE_3=OFF -DKokkos_ENABLE_DEPRECATION_WARNINGS=OFF ..
-        make -j 2 VERBOSE=1
-        ctest --output-on-failure --timeout 5 -LE test_on_Release_only
-
-  tests_Release:
-    runs-on: ubuntu-latest
-    needs: docker
-    container:
-      image: ghcr.io/gyselax/gyselalibxx_env:${{ github.sha }}
-      options: --user root
-    steps:
-    - 
-      name: Checkout gyselalibxx
-      uses: actions/checkout@v3
-      with: { submodules: recursive }
-    - 
-      name: Run tests
-      run: |
-        mkdir build
-        cd build
-        cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release -DKokkos_ENABLE_DEPRECATED_CODE_3=OFF -DKokkos_ENABLE_DEPRECATION_WARNINGS=OFF ..
-        make -j 2 VERBOSE=1
-        ctest --output-on-failure --timeout 5
+        cmake -DCMAKE_TOOLCHAIN_FILE=../toolchains/docker.gyselalibxx_env/${{ matrix.toolchain }} ..
+        cmake --build . -j 4
+        ctest -j 2 --timeout 5 --output-junit tests.xml
+    - name: Publish Test Report
+      uses: mikepenz/action-junit-report@v4
+      if: success() || failure() # always run even if the previous step fails
+      with:
+        report_paths: './build/test.xml'
 
   Docs:
     if: github.event_name == 'push' && github.ref_name == 'main'
@@ -91,11 +79,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           path: code_branch
       - name: Checkout documentation
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: documentation
           path: doc_branch
