--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,24 +5,10 @@ include:
 cmake_tests:
   extends: .cmake_tests
   image: ghcr.io/gyselax/gyselalibxx_env:138a3a55a20b6946b8b1bff509a5d7ad70f6e0c3
-  timeout: 2 hours
   variables:
     RELATIVE_RESTART_TOLERANCE: '0.0'
     ABSOLUTE_RESTART_TOLERANCE: '0.0'
-  script: |
-    set -x
-    git config --global --add safe.directory /builds/gysela-developpers/gyselalibxx/vendor/kokkos
-    rm -rf build || true
-    mkdir build
-    cd build
-    cmake -DCMAKE_CXX_FLAGS="-Wall -Werror=unused-variable -Werror=parentheses -Wno-sign-compare" -DBUILD_BENCHMARKS=ON $GENERAL_CMAKE_OPTIONS -DKokkos_ENABLE_SERIAL=ON ..
-    make -j 4
-    ctest -j 2 --output-on-failure --timeout 5 -LE test_on_Release_only --output-junit tests.xml
-  artifacts:
-    when: always
-    expire_in: 1 day
-    reports:
-      junit: ./build/tests.xml
+    TOOLCHAIN: '${CI_PROJECT_DIR}/toolchains/docker.gyselalibxx_env/tests_toolchain.cmake'
 
 cmake_tests_Release:
   extends: .cmake_tests
@@ -30,25 +16,7 @@ cmake_tests_Release:
   variables:
     RELATIVE_RESTART_TOLERANCE: '0.0'
     ABSOLUTE_RESTART_TOLERANCE: '0.0'
-  script: |
-    set -x
-    git config --global --add safe.directory /builds/gysela-developpers/gyselalibxx/vendor/kokkos
-    rm -rf build || true
-    mkdir build
-    cd build
-    cmake -DCMAKE_CXX_FLAGS="-Wall -Wno-sign-compare" -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release $GENERAL_CMAKE_OPTIONS -DKokkos_ENABLE_SERIAL=ON ..
-    make -j 4
-    ctest -j 2 --output-on-failure --timeout 5 --output-junit tests.xml
-    ls ./tests/geometryXVx/landau/fft/growthrate_t0.0to45.0.png
-    ls ./tests/geometryXVx/landau/fft/frequency_t0.0to45.0.png
-  artifacts:
-    when: always
-    expire_in: 1 day
-    paths:
-      - ./build/tests/geometryXVx/landau/fft/growthrate_t0.0to45.0.png
-      - ./build/tests/geometryXVx/landau/fft/frequency_t0.0to45.0.png
-    reports:
-      junit: ./build/tests.xml
+    TOOLCHAIN: '${CI_PROJECT_DIR}/toolchains/docker.gyselalibxx_env/tests_release_toolchain.cmake'
 
 cmake_tests_Release_OMP:
   extends: .cmake_tests
@@ -56,25 +24,9 @@ cmake_tests_Release_OMP:
   variables:
     RELATIVE_RESTART_TOLERANCE: '1e-14'
     ABSOLUTE_RESTART_TOLERANCE: '1e-14'
-  script: |
-    set -x
-    git config --global --add safe.directory /builds/gysela-developpers/gyselalibxx/vendor/kokkos
-    rm -rf build || true
-    mkdir build
-    cd build
-    cmake -DCMAKE_CXX_FLAGS="-Wall -Wno-sign-compare" -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release $GENERAL_CMAKE_OPTIONS -DKokkos_ENABLE_OPENMP=ON ..
-    make -j 4
-    OMP_NUM_THREADS=2 ctest -j 2 --output-on-failure --timeout 5 --output-junit tests.xml
-    ls ./tests/geometryXVx/landau/fft/growthrate_t0.0to45.0.png
-    ls ./tests/geometryXVx/landau/fft/frequency_t0.0to45.0.png
-  artifacts:
-    when: always
-    expire_in: 1 day
-    paths:
-      - ./build/tests/geometryXVx/landau/fft/growthrate_t0.0to45.0.png
-      - ./build/tests/geometryXVx/landau/fft/frequency_t0.0to45.0.png
-    reports:
-      junit: ./build/tests.xml
+    TOOLCHAIN: '${CI_PROJECT_DIR}/toolchains/docker.gyselalibxx_env/tests_release_omp_toolchain.cmake'
+  before_script: |
+    . ${CI_PROJECT_DIR}/toolchains/docker.gyselalibxx_env/tests_omp_environment.sh
 
 cmake_tests_Release_GPU:
   extends: .cmake_tests
@@ -83,34 +35,9 @@ cmake_tests_Release_GPU:
   variables:
     RELATIVE_RESTART_TOLERANCE: '1e-14'
     ABSOLUTE_RESTART_TOLERANCE: '1e-14'
+    TOOLCHAIN: '${CI_PROJECT_DIR}/toolchains/v100.persee/toolchain.cmake'
   before_script: |
-    . /data/gyselarunner/spack-0.20.0/share/spack/setup-env.sh
-    spack load gcc@11
-    spack env activate gyselalibxx-env-omp-cuda
-  script: |
-    set -x
-    export OMP_PROC_BIND=spread
-    export OMP_PLACES=threads
-    export OMP_NUM_THREADS=8
-    git config --global --add safe.directory /builds/gysela-developpers/gyselalibxx/vendor/kokkos
-    rm -rf build || true
-    mkdir build
-    cd build
-    cmake -DCMAKE_CXX_COMPILER=${CI_PROJECT_DIR}/vendor/kokkos/bin/nvcc_wrapper \
-          -DCMAKE_CXX_FLAGS="-Wall -Wno-sign-compare -Xcudafe --diag_suppress=unsigned_compare_with_zero -Xcudafe --diag_suppress=integer_sign_change" \
-          -DCMAKE_BUILD_TYPE=Release -DDDC_BUILD_TESTS=${DDC_BUILD_TESTING} $GENERAL_CMAKE_OPTIONS -DKokkos_ARCH_VOLTA70=ON -DKokkos_ENABLE_SERIAL=ON -DKokkos_ENABLE_CUDA=ON ..
-    make -j 8
-    ctest -j 2 --output-on-failure --timeout 5 --output-junit tests.xml -LE ResultsNotTested
-    ls ./tests/geometryXVx/landau/fft/growthrate_t0.0to45.0.png
-    ls ./tests/geometryXVx/landau/fft/frequency_t0.0to45.0.png
-  artifacts:
-    when: always
-    expire_in: 1 day
-    paths:
-      - ./build/tests/geometryXVx/landau/fft/growthrate_t0.0to45.0.png
-      - ./build/tests/geometryXVx/landau/fft/frequency_t0.0to45.0.png
-    reports:
-      junit: ./build/tests.xml
+    . ${CI_PROJECT_DIR}/toolchains/v100.persee/environment.sh
 
 indentation:
   rules:
