--- a/ci_tools/reusable_ci_jobs.yml
+++ b/ci_tools/reusable_ci_jobs.yml
@@ -46,4 +46,23 @@ setup_env_mr:
   timeout: 2 hours
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
-    GENERAL_CMAKE_OPTIONS: "-DKokkos_ENABLE_DEPRECATED_CODE_3=OFF -DKokkos_ENABLE_DEPRECATION_WARNINGS=OFF -DSLL_SPLINES_TEST_DEGREE_MIN=1 -DSLL_SPLINES_TEST_DEGREE_MAX=6 -DSLL_BUILD_TESTING=$SLL_BUILD_TESTING -DPOISSON_2D_BUILD_TESTING=$POISSON_2D_BUILD_TESTING"
+  script: |
+    set -x
+    git config --global --add safe.directory /builds/gysela-developpers/gyselalibxx/vendor/kokkos
+    rm -rf build || true
+    mkdir build
+    cd build
+    cmake -DCMAKE_TOOLCHAIN_FILE=${TOOLCHAIN} ..
+    cmake --build . -j 4
+    ctest -j 2 --timeout 5 --output-junit tests.xml
+    ls ./tests/geometryXVx/landau/fft/growthrate_t0.0to45.0.png
+    ls ./tests/geometryXVx/landau/fft/frequency_t0.0to45.0.png
+  artifacts:
+    when: always
+    expire_in: 1 day
+    paths:
+      - ./build/tests/geometryXVx/landau/fft/growthrate_t0.0to45.0.png
+      - ./build/tests/geometryXVx/landau/fft/frequency_t0.0to45.0.png
+    reports:
+      junit: ./build/tests.xml
+
