--- a/tests/geometryXVx/landau/CMakeLists.txt
+++ b/tests/geometryXVx/landau/CMakeLists.txt
@@ -11,17 +11,18 @@ add_test(NAME TestSimulationLandauFFT_XVx
 set_property(TEST TestSimulationLandauFFT_XVx PROPERTY TIMEOUT 200)
 set_property(TEST TestSimulationLandauFFT_XVx PROPERTY COST 100)
 
-add_test(NAME TestSimulationLandauRestartFFT_XVx
-    COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_landau_restart.sh"
-        "${PROJECT_SOURCE_DIR}"
-        "$<TARGET_FILE:landau_fft>"
-        "$<TARGET_FILE:Python3::Interpreter>"
-        "restart"
-        "${RELATIVE_RESTART_TOLERANCE}"
-        "${ABSOLUTE_RESTART_TOLERANCE}")
-set_property(TEST TestSimulationLandauRestartFFT_XVx PROPERTY TIMEOUT 200)
-set_property(TEST TestSimulationLandauRestartFFT_XVx PROPERTY COST 100)
-set_tests_properties(TestSimulationLandauRestartFFT_XVx PROPERTIES LABELS "ResultsNotTested" )
+if (${ACTIVATE_RESTART_TESTS})
+    add_test(NAME TestSimulationLandauRestartFFT_XVx
+        COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_landau_restart.sh"
+            "${PROJECT_SOURCE_DIR}"
+            "$<TARGET_FILE:landau_fft>"
+            "$<TARGET_FILE:Python3::Interpreter>"
+            "restart"
+            "${RELATIVE_RESTART_TOLERANCE}"
+            "${ABSOLUTE_RESTART_TOLERANCE}")
+    set_property(TEST TestSimulationLandauRestartFFT_XVx PROPERTY TIMEOUT 200)
+    set_property(TEST TestSimulationLandauRestartFFT_XVx PROPERTY COST 100)
+endif()
 
 add_test(NAME TestSimulationLandauFemUniform_xperiod_vx
     COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_landau.sh"
@@ -32,14 +33,15 @@ add_test(NAME TestSimulationLandauFemUniform_xperiod_vx
 set_property(TEST TestSimulationLandauFemUniform_xperiod_vx PROPERTY TIMEOUT 200)
 set_property(TEST TestSimulationLandauFemUniform_xperiod_vx PROPERTY COST 100)
 
-add_test(NAME TestSimulationLandauRestartFemUniform_xperiod_vx
-    COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_landau_restart.sh"
-        "${PROJECT_SOURCE_DIR}"
-        "$<TARGET_FILE:landau_fem_uniform_xperiod_vx>"
-        "$<TARGET_FILE:Python3::Interpreter>"
-        "restart"
-        "${RELATIVE_RESTART_TOLERANCE}"
-        "${ABSOLUTE_RESTART_TOLERANCE}")
-set_property(TEST TestSimulationLandauRestartFemUniform_xperiod_vx PROPERTY TIMEOUT 200)
-set_property(TEST TestSimulationLandauRestartFemUniform_xperiod_vx PROPERTY COST 100)
-set_tests_properties(TestSimulationLandauRestartFemUniform_xperiod_vx PROPERTIES LABELS "ResultsNotTested" )
+if (${ACTIVATE_RESTART_TESTS})
+    add_test(NAME TestSimulationLandauRestartFemUniform_xperiod_vx
+        COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_landau_restart.sh"
+            "${PROJECT_SOURCE_DIR}"
+            "$<TARGET_FILE:landau_fem_uniform_xperiod_vx>"
+            "$<TARGET_FILE:Python3::Interpreter>"
+            "restart"
+            "${RELATIVE_RESTART_TOLERANCE}"
+            "${ABSOLUTE_RESTART_TOLERANCE}")
+    set_property(TEST TestSimulationLandauRestartFemUniform_xperiod_vx PROPERTY TIMEOUT 200)
+    set_property(TEST TestSimulationLandauRestartFemUniform_xperiod_vx PROPERTY COST 100)
+endif()
