Charge species must be a float
Must be merged after #248.
Closes #260.

See merge request gysela-developpers/gyselalibxx!573

--------------------------------------------

Co-authored-by: Emily Bourne <emily.bourne@epfl.ch>

--- a/simulations/geometryXVx/landau/landau_twospecies.yaml
+++ b/simulations/geometryXVx/landau/landau_twospecies.yaml
@@ -7,7 +7,7 @@ SplineMesh:
   vx_ncells: 127
 
 SpeciesInfo:
-- charge: -1
+- charge: -1.
   mass: 0.0005
   density_eq: 1.
   temperature_eq: 1.
@@ -15,7 +15,7 @@ SpeciesInfo:
   perturb_amplitude: 0.01
   perturb_mode: 1
 
-- charge: 1
+- charge: 1.
   mass: 2.
   density_eq: 1.
   temperature_eq: 1.
