--- a/tests/geometryXVx/bump_on_tail/bumpontail.yaml
+++ b/tests/geometryXVx/bump_on_tail/bumpontail.yaml
@@ -7,7 +7,7 @@ SplineMesh:
   vx_ncells: 127
 
 SpeciesInfo:
-- charge: -1
+- charge: -1.
   mass: 0.0005
   epsilon_bot: 0.1
   temperature_bot: 0.2
