--- a/simulations/collisions/coll_2species_maxwellian_differentV.yaml
+++ b/simulations/collisions/coll_2species_maxwellian_differentV.yaml
@@ -7,12 +7,12 @@ SplineMesh:
   mu_ncells: 63
 
 SpeciesInfo:
-- charge: 1
+- charge: 1.
   mass: 1.
   density_eq: 1.
   temperature_eq: 1.
   mean_velocity_eq: 0.
-- charge: -1
+- charge: -1.
   mass: 5.44e-4    # 1/1836
   density_eq: 1.
   temperature_eq: 1.
