--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,4 +17,5 @@ add_subdirectory(multipatch)
 add_subdirectory(advection)
 add_subdirectory(timestepper)
 add_subdirectory(collisions)
+add_subdirectory(mpi_parallelisation)
 add_subdirectory(pde_solvers)
