--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(geometryXVx)
 add_subdirectory(geometryXYVxVy)
 add_subdirectory(geometryRTheta)
 add_subdirectory(multipatch)
+add_subdirectory(mpi_parallelisation)
 add_subdirectory(pde_solvers)
 add_subdirectory(quadrature)
 add_subdirectory(timestepper)
