Add batch dimension to quadrature operator
Fixes #253

To be merged after !587

See merge request gysela-developpers/gyselalibxx!541

--------------------------------------------

Co-authored-by: KARA Abdelhadi 265943 <abdelhadi.kara@cea.fr>
Co-authored-by: abdelhadi.kara@cea.fr <karaa@ruche01.cluster>
Co-authored-by: abdelhadi.kara@cea.fr <karaa@ruche02.cluster>

--- a/tests/quadrature/CMakeLists.txt
+++ b/tests/quadrature/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(unit_tests_quadrature
     quadrature_1d.cpp
     quadrature_2d.cpp
 	neumann_quadrature_spline.cpp
+    batched_quadrature.cpp
     ../main.cpp
 )
 target_link_libraries(unit_tests_quadrature
