--- a/src/geometryXYVxVy/poisson/CMakeLists.txt
+++ b/src/geometryXYVxVy/poisson/CMakeLists.txt
@@ -16,6 +16,7 @@ target_link_libraries("poisson_xy"
         sll::SLL
         gslx::geometry_xyvxvy
         gslx::pde_solvers
+        gslx::quadrature
         gslx::speciesinfo
         gslx::utils
 )
