DISCOVERY_MODE PRE_TEST in all tests
Closes #280

See merge request gysela-developpers/gyselalibxx!582

--------------------------------------------

--- a/tests/advection/CMakeLists.txt
+++ b/tests/advection/CMakeLists.txt
@@ -29,4 +29,5 @@ target_compile_definitions(1d_advection PUBLIC)
 
 gtest_discover_tests(1d_advection
     PROPERTIES TIMEOUT 10
+    DISCOVERY_MODE PRE_TEST
 )
