--- a/tests/data_types/CMakeLists.txt
+++ b/tests/data_types/CMakeLists.txt
@@ -16,4 +16,4 @@ target_link_libraries(unit_tests_data_types
         gslx::data_types
 )
 
-gtest_discover_tests(unit_tests_data_types)
+gtest_discover_tests(unit_tests_data_types DISCOVERY_MODE PRE_TEST)
