--- a/tests/multipatch/spline/CMakeLists.txt
+++ b/tests/multipatch/spline/CMakeLists.txt
@@ -16,4 +16,4 @@ PUBLIC
         
 )
 target_compile_definitions("${test_name_gtest}" PUBLIC)
-gtest_discover_tests("${test_name_gtest}" )
+gtest_discover_tests("${test_name_gtest}" DISCOVERY_MODE PRE_TEST)
