Compute nustar0_r from nustar0_at_rpeak
Closes #291

See merge request gysela-developpers/gyselalibxx!591

--------------------------------------------

--- a/src/collisions/CMakeLists.txt
+++ b/src/collisions/CMakeLists.txt
@@ -11,8 +11,11 @@ target_include_directories("collisions"
 target_link_libraries("collisions"
     PUBLIC
         DDC::DDC
+        gslx::paraconfpp
+        gslx::speciesinfo
         gslx::utils
         koliop::koliop
+        paraconf::paraconf
 )
 
 add_library("gslx::collisions" ALIAS "collisions")
