--- a/simulations/collisions/coll_1specie_maxwellian.yaml
+++ b/simulations/collisions/coll_1specie_maxwellian.yaml
@@ -13,6 +13,10 @@ SpeciesInfo:
   temperature_eq: 1.
   mean_velocity_eq: 0.
 
+CollisionsInfo:
+  nustar0_rpeak: 1.
+  collisions_interspecies: false
+
 Algorithm:
   deltat: 0.01  # Attention: must be < 1.e-2 because plays the role of nustar here
   nbiter: 100   # Fixed such that final time = 1/nustar
