Plasma-Neutral coupling GeometryXVx
See merge request gysela-developpers/gyselalibxx!492

--------------------------------------------

Co-authored-by: Emily Bourne <emily.bourne@epfl.ch>
Co-authored-by: Josu Blancoortiz <josu.blancoortiz2@cea.fr>
Co-authored-by: Abdelhadi KARA <abdelhadi.kara@cea.fr>
Co-authored-by: Baptiste Legouix <stilynx51@gmail.com>
Co-authored-by: Virginie Grandgirard <virginie.grandgirard@cea.fr>
Co-authored-by: Josu Blancoortiz <josu.blancoortiz2@cea.fr>

--- a/src/geometryXVx/time_integration_hybrid/CMakeLists.txt
+++ b/src/geometryXVx/time_integration_hybrid/CMakeLists.txt
@@ -17,6 +17,7 @@ target_link_libraries("time_integration_hybrid_${GEOMETRY_VARIANT}"
         gslx::boltzmann_${GEOMETRY_VARIANT}
         gslx::initialization_${GEOMETRY_VARIANT}
         gslx::fluidsolver_${GEOMETRY_VARIANT}
+        gslx::fluidrhs_${GEOMETRY_VARIANT}
         gslx::poisson_${GEOMETRY_VARIANT}
         gslx::speciesinfo
 )
