--- a/src/geometryXVx/geometryMX/CMakeLists.txt
+++ b/src/geometryXVx/geometryMX/CMakeLists.txt
@@ -1,5 +1,6 @@
 # SPDX-License-Identifier: MIT
 
 add_subdirectory(fluidinitialization)
-add_subdirectory(fluidsolver)
+add_subdirectory(fluidtransportsolver)
 add_subdirectory(reactionrates)
+add_subdirectory(kineticfluidcoupling)
