--- a/src/quadrature/CMakeLists.txt
+++ b/src/quadrature/CMakeLists.txt
@@ -7,6 +7,7 @@ target_include_directories(quadrature
 target_link_libraries(quadrature INTERFACE
     DDC::DDC
     sll::SLL
+    gslx::utils
 )
 
 add_library(gslx::quadrature ALIAS quadrature)
