Update naming conventions in io
Update naming conventions in io. See #292

See merge request gysela-developpers/gyselalibxx!616

--------------------------------------------

--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -13,6 +13,8 @@ target_link_libraries("io"
     PUBLIC
         DDC::DDC
         gslx::paraconfpp
+        gslx::utils
+
 )
 
 add_library("gslx::io" ALIAS "io")
