Update naming conventions in geometryXYVxVy
Update naming conventions in geometryXYVxVy. See #292

See merge request gysela-developpers/gyselalibxx!617

--------------------------------------------

--- a/src/geometryXYVxVy/time_integration/CMakeLists.txt
+++ b/src/geometryXYVxVy/time_integration/CMakeLists.txt
@@ -15,6 +15,8 @@ target_link_libraries("time_integration_xyvxvy"
         gslx::poisson_xy
         gslx::speciesinfo
         gslx::vlasov_xyvxvy
+        gslx::utils
+
 )
 
 add_library("gslx::time_integration_xyvxvy" ALIAS "time_integration_xyvxvy")
