Update naming conventions in multipatch
Update naming conventions in multipatch. See #292

See merge request gysela-developpers/gyselalibxx!620

--------------------------------------------

--- a/tests/multipatch/geometries/CMakeLists.txt
+++ b/tests/multipatch/geometries/CMakeLists.txt
@@ -7,5 +7,7 @@ target_include_directories("multipatch_geometries"
 target_link_libraries("multipatch_geometries" INTERFACE
     DDC::DDC
     gslx::multipatch_connectivity
+    gslx::utils
+
 )
 add_library("gslx::multipatch_geometries" ALIAS "multipatch_geometries")
