--- a/tests/multipatch/connectivity/CMakeLists.txt
+++ b/tests/multipatch/connectivity/CMakeLists.txt
@@ -35,3 +35,18 @@ PUBLIC
 target_compile_definitions("index_transformation_test" PUBLIC)
 gtest_discover_tests("index_transformation_test" DISCOVERY_MODE PRE_TEST)
 
+add_executable("multipatch_connectivity_test"
+        multipatch_connectivity.cpp
+        ../../main.cpp
+)
+target_link_libraries("multipatch_connectivity_test"
+PUBLIC
+        DDC::DDC
+        GTest::gtest
+        GTest::gmock
+
+        gslx::multipatch_connectivity
+        gslx::multipatch_geometries
+)
+target_compile_definitions("multipatch_connectivity_test" PUBLIC)
+gtest_discover_tests("multipatch_connectivity_test" DISCOVERY_MODE PRE_TEST)
