Add test to ensure patch list is correct

--- a/tests/multipatch/connectivity/CMakeLists.txt
+++ b/tests/multipatch/connectivity/CMakeLists.txt
@@ -47,6 +47,7 @@ PUBLIC
 
         gslx::multipatch_connectivity
         gslx::multipatch_geometries
+        gslx::utils
 )
 target_compile_definitions("multipatch_connectivity_test" PUBLIC)
 gtest_discover_tests("multipatch_connectivity_test" DISCOVERY_MODE PRE_TEST)
