Update naming conventions in 5D geometry
See merge request gysela-developpers/gyselalibxx!630

--------------------------------------------

--- a/simulations/geometry5D/testcollisions/CMakeLists.txt
+++ b/simulations/geometry5D/testcollisions/CMakeLists.txt
@@ -12,6 +12,8 @@ target_link_libraries(testcollisions
   gslx::quadrature
   gslx::collisions
   gslx::speciesinfo
+  gslx::utils
+
   PDI::pdi
   paraconf::paraconf
   )
