Update naming conventions for collisions and VparMu geometry
Update naming conventions for collisions and VparMu geometry. See #292

See merge request gysela-developpers/gyselalibxx!629

--------------------------------------------

--- a/simulations/geometryVparMu/collisions/CMakeLists.txt
+++ b/simulations/geometryVparMu/collisions/CMakeLists.txt
@@ -12,6 +12,8 @@ target_link_libraries(test_collSpVparMu
   gslx::io
   gslx::quadrature
   gslx::speciesinfo
+  gslx::utils
+
   paraconf::paraconf
   )
 
