Update naming conventions in RTheta geometry
Update naming conventions in RTheta geometry. See #292

See merge request gysela-developpers/gyselalibxx!627

--------------------------------------------

--- a/src/geometryRTheta/interpolation/CMakeLists.txt
+++ b/src/geometryRTheta/interpolation/CMakeLists.txt
@@ -13,6 +13,8 @@ target_link_libraries("interpolation_2D_rp"
         DDC::DDC
         sll::SLL
         gslx::geometry_RTheta
+        gslx::utils
+
 )
 
 add_library("gslx::interpolation_2D_rp" ALIAS "interpolation_2D_rp")
