Update naming conventions in XY geometry
See merge request gysela-developpers/gyselalibxx!633

--------------------------------------------

--- a/src/geometryXY/time_integration/CMakeLists.txt
+++ b/src/geometryXY/time_integration/CMakeLists.txt
@@ -13,6 +13,8 @@ target_link_libraries("predcorr_rk2_xy" INTERFACE
     gslx::geometry_XY
     gslx::pde_solvers
     gslx::timestepper
+    gslx::utils
+
 
 
 )
