--- a/tests/data_types/CMakeLists.txt
+++ b/tests/data_types/CMakeLists.txt
@@ -13,7 +13,9 @@ target_link_libraries(unit_tests_data_types
     PUBLIC
         GTest::gtest
         GTest::gmock
+
         gslx::data_types
+        gslx::utils
 )
 
 gtest_discover_tests(unit_tests_data_types DISCOVERY_MODE PRE_TEST)
