Add MultiPatchConnectivity class
Remove Patch1 and Patch2 from Interface. Their presence is not guaranteed at the edge. Add a connected_to_patch method to check if a patch is connected. Add a MultiPatchConnectivity class and test it using the 9 patch geometry

See merge request gysela-developpers/gyselalibxx!625

--------------------------------------------

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -134,6 +134,7 @@ markdown_best_practices:
 
 cppcheck_static_analysis:
   rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
   stage: static_analysis
   needs: [ setup_env_mr ]
