Stop using deprecated DDC alias
See merge request gysela-developpers/gyselalibxx!649

--------------------------------------------

--- a/tests/multipatch/connectivity/CMakeLists.txt
+++ b/tests/multipatch/connectivity/CMakeLists.txt
@@ -1,12 +1,26 @@
 
-add_executable("unit_tests_connectivity"
+
+add_executable("coord_transformation_test"
         coord_transformation.cpp
-        index_transformation_uniform.cpp
-        index_transformation_non_uniform.cpp
+        ../../main.cpp
+)
+target_link_libraries("coord_transformation_test"
+PUBLIC
+        DDC::DDC
+        GTest::gtest
+        GTest::gmock
+
+        gslx::multipatch_connectivity
+        gslx::multipatch_geometries
+)
+target_compile_definitions("coord_transformation_test" PUBLIC)
+gtest_discover_tests("coord_transformation_test" DISCOVERY_MODE PRE_TEST)
+
+add_executable("multipatch_connectivity_test"
         multipatch_connectivity.cpp
         ../../main.cpp
 )
-target_link_libraries("unit_tests_connectivity"
+target_link_libraries("multipatch_connectivity_test"
 PUBLIC
         DDC::DDC
         GTest::gtest
@@ -16,5 +30,24 @@ PUBLIC
         gslx::multipatch_geometries
         gslx::utils
 )
-target_compile_definitions("unit_tests_connectivity" PUBLIC)
-gtest_discover_tests("unit_tests_connectivity" DISCOVERY_MODE PRE_TEST)
+target_compile_definitions("multipatch_connectivity_test" PUBLIC)
+gtest_discover_tests("multipatch_connectivity_test" DISCOVERY_MODE PRE_TEST)
+
+
+add_executable("index_transformation_test"
+        index_transformation_uniform.cpp
+        index_transformation_non_uniform.cpp
+        ../../main.cpp
+)
+target_link_libraries("index_transformation_test"
+PUBLIC
+        DDC::DDC
+        GTest::gtest
+        GTest::gmock
+
+        gslx::multipatch_connectivity
+        gslx::multipatch_geometries
+)
+target_compile_definitions("index_transformation_test" PUBLIC)
+gtest_discover_tests("index_transformation_test" DISCOVERY_MODE PRE_TEST)
+
