Create MultipatchField storage class
Create a class that stores a tuple with the field on each patch. The field can be accessed via the patch tag.

See merge request gysela-developpers/gyselalibxx!636

--------------------------------------------

Alexander Hoffmann <alexander.hoffmann@ipp.mpg.de>
Co-authored-by: Alexander Hoffmann <alexander.hoffmann@ipp.mpg.de>

--- a/tests/multipatch/data_types/CMakeLists.txt
+++ b/tests/multipatch/data_types/CMakeLists.txt
@@ -1,8 +1,8 @@
 
-
-set(test_name_gtest "multipatch_spline_builder")
+set(test_name_gtest "multipatch_field_test")
 add_executable("${test_name_gtest}"
-        multipatch_spline_builder.cpp
+        multipatch_field_2p.cpp
+        multipatch_field_9p.cpp
         ../../main.cpp
 )
 target_link_libraries("${test_name_gtest}"
@@ -11,10 +11,10 @@ PUBLIC
         GTest::gtest
         GTest::gmock
 
-        gslx::multipatch_spline
+        gslx::multipatch_data_types
         gslx::utils
-        
+        gslx::multipatch_connectivity
+        gslx::multipatch_geometries
 )
 target_compile_definitions("${test_name_gtest}" PUBLIC)
 gtest_discover_tests("${test_name_gtest}" DISCOVERY_MODE PRE_TEST)
-
