--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -60,21 +60,17 @@ jobs:
       uses: actions/checkout@v4
       with: { submodules: recursive }
     - 
-      run: |
-        whoami
-        useradd -m non_sudo_user
-        su - non_sudo_user
-        whoami
-    - 
       name: Run tests
       run: |
-        whoami
         mpiexec --help
         mkdir build
         cd build
         cmake -DCMAKE_TOOLCHAIN_FILE=../toolchains/docker.gyselalibxx_env/${{ matrix.toolchain }} ..
         cmake --build . -j 4
         ctest -j 2 --timeout 5 --output-junit tests.xml
+      with:
+        OMPI_ALLOW_RUN_AS_ROOT: 1
+        OMPI_ALLOW_RUN_AS_ROOT_CONFIRM: 1
     - name: Publish Test Report
       uses: mikepenz/action-junit-report@v4
       if: success() || failure() # always run even if the previous step fails
