--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -67,6 +67,9 @@ jobs:
         cmake -DCMAKE_TOOLCHAIN_FILE=../toolchains/docker.gyselalibxx_env/${{ matrix.toolchain }} ..
         cmake --build . -j 4
         ctest -j 2 --timeout 5 --output-junit tests.xml
+      env:
+        OMPI_ALLOW_RUN_AS_ROOT: 1 # OpenMPI can run as root safely inside a docker container
+        OMPI_ALLOW_RUN_AS_ROOT_CONFIRM: 1
     - name: Publish Test Report
       uses: mikepenz/action-junit-report@v4
       if: success() || failure() # always run even if the previous step fails
