Add UniformGridIndexMatching class
Closes #300

See merge request gysela-developpers/gyselalibxx!626

--------------------------------------------

Co-authored-by: Pauline Vidal <pauline.vidal@ipp.mpg.de>

--- a/src/multipatch/connectivity/CMakeLists.txt
+++ b/src/multipatch/connectivity/CMakeLists.txt
@@ -8,5 +8,6 @@ target_include_directories("multipatch_connectivity"
 target_link_libraries("multipatch_connectivity" INTERFACE
     DDC::DDC
     gslx::utils
+    gslx::data_types
 )
 add_library("gslx::multipatch_connectivity" ALIAS "multipatch_connectivity")
