--- a/tests/multipatch/connectivity/CMakeLists.txt
+++ b/tests/multipatch/connectivity/CMakeLists.txt
@@ -1,9 +1,12 @@
 
+
 add_executable("unit_tests_connectivity"
         coord_transformation.cpp
         index_transformation_uniform.cpp
         index_transformation_non_uniform.cpp
         multipatch_connectivity.cpp
+        matching_idx_slice_uniform_grids.cpp
+        matching_idx_slice_non_uniform_grids.cpp
         ../../main.cpp
 )
 target_link_libraries("unit_tests_connectivity"
