--- a/tests/geometryRTheta/advection_2d_rp/params.yaml
+++ b/tests/geometryRTheta/advection_2d_rp/params.yaml
@@ -1,9 +1,11 @@
-Mesh:
+SplineMesh:
   r_min: 0
   r_max: 1
-  r_size: 40
-  p_size: 80
+  r_ncells: 40
+  p_ncells: 80
+Time:
   time_step: 0.1
   final_time: 0.8
+Output:
   save_curves: false
   save_feet: false
