Create PatchLocator operators
Closes #309

Create a IPatchLocator.

Create a OnionPatchLocator, child class of IPatchLocator specialised for "onion" geometries.

Add associated tests to the OnionPatchLocator operator.

Add a `src/multipatch/data_types/types.hpp` to define aliases for the MultipatchType class.

See merge request gysela-developpers/gyselalibxx!642

--------------------------------------------

Co-authored-by: Pauline Vidal <pauline.vidal@ipp.mpg.de>
Co-authored-by: Emily Bourne <emily.bourne@epfl.ch>
Co-authored-by: Yann Munschy <yann.munschy@cea.fr>

--- a/src/multipatch/connectivity/CMakeLists.txt
+++ b/src/multipatch/connectivity/CMakeLists.txt
@@ -7,7 +7,8 @@ target_include_directories("multipatch_connectivity"
 )
 target_link_libraries("multipatch_connectivity" INTERFACE
     DDC::DDC
-    gslx::utils
     gslx::data_types
+    gslx::multipatch_data_types
+    gslx::utils
 )
 add_library("gslx::multipatch_connectivity" ALIAS "multipatch_connectivity")
