--- a/tests/multipatch/connectivity/CMakeLists.txt
+++ b/tests/multipatch/connectivity/CMakeLists.txt
@@ -4,9 +4,10 @@ add_executable("unit_tests_connectivity"
         coord_transformation.cpp
         index_transformation_uniform.cpp
         index_transformation_non_uniform.cpp
-        multipatch_connectivity.cpp
         matching_idx_slice_uniform_grids.cpp
         matching_idx_slice_non_uniform_grids.cpp
+        multipatch_connectivity.cpp
+        patch_locator_onion_shape_2patches.cpp
         ../../main.cpp
 )
 target_link_libraries("unit_tests_connectivity"
@@ -16,6 +17,7 @@ PUBLIC
         GTest::gmock
 
         gslx::multipatch_connectivity
+        gslx::multipatch_data_types
         gslx::multipatch_geometries
         gslx::utils
 )
