Fix polar Poisson test
As seen in !658 and !660 there is a small error in the Poisson test. This was introduced by !661. !661 did not run the Poisson tests as it did not modify a file in `src/geometryRTheta/poisson/`.

This MR ensures that the tests are also run when files in `tests/geometryRTheta/polar_poisson/` are modified. It also changes the files in that folder to use the same naming conventions in the .yml file as are used in the rest of the code

See merge request gysela-developpers/gyselalibxx!664

--------------------------------------------

--- a/ci_tools/reusable_ci_jobs.yml
+++ b/ci_tools/reusable_ci_jobs.yml
@@ -8,7 +8,7 @@
     - echo "CHANGED_FILES=${changed_files}" >> build.env
     - FOUND_SLL=$(grep "vendor/sll/.*" -x changed_files.txt || true)
     - if [ -z "$FOUND_SLL" ]; then echo "SLL_BUILD_TESTING=OFF" >> build.env; else echo "SLL_BUILD_TESTING=ON" >> build.env; fi
-    - FOUND_POISSON_2D=$(grep "src/geometryRTheta/poisson/.*" -x changed_files.txt || true)
+    - FOUND_POISSON_2D=$(grep "\(src/geometryRTheta/poisson/.*\)\|\(geometryRTheta/polar_poisson/.*\)" -x changed_files.txt || true)
     - if [ -z "$FOUND_POISSON_2D" ]; then echo "POISSON_2D_BUILD_TESTING=OFF" >> build.env; else echo "POISSON_2D_BUILD_TESTING=ON" >> build.env; fi
     - FOUND_DDC=$(grep "vendor/ddc" changed_files.txt || true)
     - if [ -z "$FOUND_DDC" ]; then echo "DDC_BUILD_TESTING=OFF" >> build.env; else echo "DDC_BUILD_TESTING=ON" >> build.env; fi
