MultipatchType spline builder
Remove `explicit` from the `MultipatchType` constructors. This class needs to be able to implicitly convert from one type to another to handle types that are equivalent but have definitions of the type alias from different parts of the code.

Add some type aliases for the `MultipatchType`.

Modify `MultipatchSplineBuilder` to use `MultipatchType`s. The template arguments are modified to be closer to the arguments of `ddc::SplineBuilder`. The patches are now template arguments which makes it easier to expand patch-dependent expressions.

The tests are updated to use the new syntax. They now use an existing geometry (`non_periodic_non_uniform_2d_2patches`) instead of creating their own.

See merge request gysela-developpers/gyselalibxx!671

--------------------------------------------

--- a/tests/multipatch/spline/CMakeLists.txt
+++ b/tests/multipatch/spline/CMakeLists.txt
@@ -11,6 +11,7 @@ PUBLIC
         GTest::gtest
         GTest::gmock
 
+        gslx::multipatch_geometries
         gslx::multipatch_spline
         gslx::utils
         
