Initialisation of 4D axisymmetric distribution function
Closes #337

See merge request gysela-developpers/gyselalibxx!659

--------------------------------------------

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,6 +19,7 @@ add_subdirectory(data_types)
 add_subdirectory(geometryXVx)
 add_subdirectory(geometryXYVxVy)
 add_subdirectory(geometryRTheta)
+add_subdirectory(geometryTokamAxi)
 add_subdirectory(geometryVparMu)
 add_subdirectory(multipatch)
 add_subdirectory(mpi_parallelisation)
