Extrapolation rules for MultipatchSplineEvaluator
See merge request gysela-developpers/gyselalibxx!702

--------------------------------------------

--- a/tests/multipatch/spline/CMakeLists.txt
+++ b/tests/multipatch/spline/CMakeLists.txt
@@ -1,9 +1,11 @@
 
 
-set(test_name_gtest "multipatch_spline_builder")
+set(test_name_gtest "multipatch_spline_tests")
 add_executable("${test_name_gtest}"
         multipatch_spline_builder.cpp
         multipatch_spline_builder_2d.cpp
+        constant_extrapolation_rules_onion.cpp
+        null_extrapolation_rules.cpp
         ../../main.cpp
 )
 target_link_libraries("${test_name_gtest}"
@@ -15,8 +17,6 @@ PUBLIC
         gslx::multipatch_geometries
         gslx::multipatch_spline
         gslx::utils
-        
 )
 target_compile_definitions("${test_name_gtest}" PUBLIC)
 gtest_discover_tests("${test_name_gtest}" DISCOVERY_MODE PRE_TEST)
-
