--- a/tests/geometry5D/collisions/input_params_twospecies_geom5D.yaml
+++ b/tests/geometry5D/collisions/input_params_twospecies_geom5D.yaml
@@ -1,9 +1,9 @@
 Mesh:
-  ncell_tor1: 1       # number of cells in the radial direction
-  ncell_tor2: 1       # number of cells in the poloidal direction
-  ncell_tor3: 1       # number of cells in the toroidal direction
-  ncell_vpar: 128     # number of cells in the parallel velocity direction
-  ncell_mu: 64        # number of cells in the adiabatic invariant direction
+  ncell_bkpoints_tor1: 8       # number of cells in the radial direction
+  ncell_bkpoints_tor2: 4       # number of cells in the poloidal direction
+  ncell_bkpoints_tor3: 16      # number of cells in the toroidal direction
+  ncell_bkpoints_vpar: 128     # number of cells in the parallel velocity direction
+  ncell_bkpoints_mu: 64        # number of cells in the adiabatic invariant direction
 
   min_tor1: 0.0
   max_tor1: 1.0
