Externally defined interpolation points with uniform and non-uniform Bsplines
This MR aims to enable performing geometryXVx simulation with interpolation points defined in a hdf5 file. Two python scripts have been added to a pre-process folder to create these hdf5 files. There are 2 new geometries to handle this:
- `xperiod_vx_user_defined_grid`
- `xnonperiod_vx_user_defined_grid`

These geometries are compiled with an `INPUT_MESH` macro. When this option is set, the executable will look for hdf5 files whose names are specified in the configuration file. These files describe the interpolation points.

The `NonUniformInterpolationPoints` class has been added to the `ddcHelper` namespace. This class constructs interpolation points from a user defined points. It checks if the provided interpolation points are compatible with the spline knots.

:warning: The geometries `xperiod_vx_user_defined_grid` and `xnonperiod_vx_user_defined_grid` still use uniform splines. This means that the points cannot be very random otherwise the spline problem will be poorly defined. It would probably make more sense to keep the `GrevilleInterpolationPoints` and use non-uniform splines as the input. This is left for a later MR to ensure that `NonUniformInterpolationPoints` is tested. Once this class is used in !690 this configuration can be improved

See merge request gysela-developpers/gyselalibxx!512

--------------------------------------------

Co-authored-by: Emily Bourne <emily.bourne@epfl.ch>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,7 +177,7 @@ add_compile_definitions(KP_KERNEL_TIMER_PATH="${CMAKE_CURRENT_BINARY_DIR}/kokkos
 ## Change the C++ flags to the voice specific ones
 set(CMAKE_CXX_FLAGS "${GYSELALIBXX_DEFAULT_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
-set(GEOMETRY_XVx_VARIANTS_LIST xperiod_vx xnonperiod_vx)
+set(GEOMETRY_XVx_VARIANTS_LIST xperiod_vx xnonperiod_vx xperiod_vx_user_defined_grid xnonperiod_vx_user_defined_grid)
 
 ## Get the main code in `src/`
 add_subdirectory(src/)
