--- a/simulations/geometryXVx/landau/CMakeLists.txt
+++ b/simulations/geometryXVx/landau/CMakeLists.txt
@@ -1,6 +1,8 @@
 # SPDX-License-Identifier: MIT
 
-foreach(GEOMETRY_VARIANT IN LISTS GEOMETRY_XVx_VARIANTS_LIST)
+set(BASIC_GEOMETRY_XVx_VARIANTS_LIST xperiod_vx xnonperiod_vx)
+
+foreach(GEOMETRY_VARIANT IN LISTS BASIC_GEOMETRY_XVx_VARIANTS_LIST)
 
 add_executable(landau_fem_uniform_${GEOMETRY_VARIANT} landau_fem_uniform.cpp)
 target_link_libraries(landau_fem_uniform_${GEOMETRY_VARIANT}
