--- a/tests/geometryXVx/geometryMX/CMakeLists.txt
+++ b/tests/geometryXVx/geometryMX/CMakeLists.txt
@@ -3,7 +3,9 @@
 
 include(GoogleTest)
 
-foreach(GEOMETRY_VARIANT IN LISTS GEOMETRY_XVx_VARIANTS_LIST)
+set(BASIC_GEOMETRY_XVx_VARIANTS_LIST xperiod_vx xnonperiod_vx)
+
+foreach(GEOMETRY_VARIANT IN LISTS BASIC_GEOMETRY_XVx_VARIANTS_LIST)
 
 add_executable(unit_tests_geometryMX_${GEOMETRY_VARIANT}
 	../../main.cpp
