Add PDI saving in simulation TokamAxi
Closes #350

See merge request gysela-developpers/gyselalibxx!690

--------------------------------------------

Co-authored-by: Emily Bourne <emily.bourne@epfl.ch>
Co-authored-by: Thomas Padioleau <thomas.padioleau@cea.fr>
Co-authored-by: Yann Munschy <yann.munschy@cea.fr>

--- a/simulations/CMakeLists.txt
+++ b/simulations/CMakeLists.txt
@@ -2,6 +2,7 @@
 
 add_subdirectory(geometry5D)
 add_subdirectory(geometryRTheta)
+add_subdirectory(geometryTokamAxi)
 add_subdirectory(geometryVparMu)
 add_subdirectory(geometryXVx)
 add_subdirectory(geometryXY)
