Create a MultipatchSplineEvaluator2D operator
Closes #311

See merge request gysela-developpers/gyselalibxx!709

--------------------------------------------

Co-authored-by: Emily Bourne <emily.bourne@epfl.ch>
Co-authored-by: Thomas Padioleau <thomas.padioleau@cea.fr>
Co-authored-by: Pauline Vidal <pauline.vidal@ipp.mpg.de>

--- a/src/multipatch/spline/CMakeLists.txt
+++ b/src/multipatch/spline/CMakeLists.txt
@@ -8,6 +8,7 @@ target_include_directories("multipatch_spline"
 target_link_libraries("multipatch_spline" INTERFACE
     DDC::DDC
     gslx::multipatch_data_types
+    gslx::multipatch_connectivity
     gslx::utils
 
 )
