Add PDI MPI plugins to Docker
See merge request gysela-developpers/gyselalibxx!733

--------------------------------------------

--- a/docker/gyselalibxx_env/Dockerfile
+++ b/docker/gyselalibxx_env/Dockerfile
@@ -36,7 +36,8 @@ RUN chmod +x /bin/bash_run \
     openssh-client \
     pdidev-archive-keyring \
     hdf5-tools \
-    pdiplugin-decl-hdf5-serial \
+    pdiplugin-mpi-openmpi \
+    pdiplugin-decl-hdf5-openmpi \
     pdiplugin-set-value \
     python3-pip \
     libpdi-dev \
