--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -11,6 +11,7 @@ target_include_directories("io"
 
 target_link_libraries("io"
     PUBLIC
+        PDI::pdi
         DDC::DDC
         gslx::paraconfpp
         gslx::utils
